force-app/main/default/objects/Employee__c/fields/Employee_Status__c.field-meta.xml
<CustomField>
    <fullName>Employee_Status__c</fullName>
    <label>Employee Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Selected</fullName>
            </value>
            <value>
                <fullName>On hold</fullName>
                <isActive>false</isActive>
                <label>On hold</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <isActive>false</isActive>
                <label>Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>