force-app/main/default/objects/Employee__c/fields/On_Bench_status__c.field-meta.xml
<CustomField>
    <fullName>On_Bench_status__c</fullName>
    <label>On Bench status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Common_Values</valueSetName>
    </valueSet>
</CustomField>