force-app/main/default/objects/Employee__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Texas</fullName>
            </value>
            <value>
                <fullName>Andhra</fullName>
            </value>
            <value>
                <fullName>Telangana</fullName>
            </value>
            <value>
                <fullName>Virginia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>